[gd_scene load_steps=11 format=2]

[ext_resource path="res://DeckBuildMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/card-game-background.png" type="Texture" id=2]
[ext_resource path="res://Assets/DotGothic16-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/ok-button-normal.png" type="Texture" id=4]
[ext_resource path="res://Assets/ok-button-pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/hand-layout.png" type="Texture" id=6]
[ext_resource path="res://Assets/exit-button-normal.png" type="Texture" id=7]
[ext_resource path="res://Assets/exit-button-pressed.png" type="Texture" id=8]
[ext_resource path="res://Main/CardView.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="DeckBuildMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand-layout" type="Sprite" parent="."]
position = Vector2( 109, 75 )
rotation = -3.14159
texture = ExtResource( 6 )
flip_h = true

[node name="Hand-layout2" type="Sprite" parent="."]
position = Vector2( 392, 71 )
rotation = -3.14159
texture = ExtResource( 6 )
flip_h = true

[node name="CardList" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardListGrid" type="GridContainer" parent="CardList"]
margin_left = 28.0
margin_top = 52.0
margin_right = 68.0
margin_bottom = 92.0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckBuildView" type="Control" parent="."]
margin_left = 240.0
margin_top = 65.0
margin_right = 586.0
margin_bottom = 254.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckGrid" type="GridContainer" parent="DeckBuildView"]
margin_left = 74.0
margin_top = -18.0
margin_right = 308.0
margin_bottom = 236.0
custom_constants/vseparation = 4
custom_constants/hseparation = -20
columns = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 15.0
margin_top = 297.0
margin_right = 133.0
margin_bottom = 345.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="TextureButton" parent="."]
margin_left = 145.0
margin_top = 297.0
margin_right = 263.0
margin_bottom = 345.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardListLabel" type="Label" parent="."]
margin_left = 20.0
margin_top = 4.0
margin_right = 164.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "Card List"

[node name="DeckListLabel" type="Label" parent="."]
margin_left = 300.0
margin_top = 2.0
margin_right = 444.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "Deck "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckLimitLabel" type="Label" parent="."]
margin_left = 471.0
margin_top = 4.0
margin_right = 615.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "0/0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardView" parent="." instance=ExtResource( 9 )]
visible = false
margin_left = 456.0
margin_top = 231.0
margin_right = 456.0
margin_bottom = 231.0

[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
